Change footer links

--- a/src/index.html
+++ b/src/index.html
@@ -240,10 +240,10 @@
         </div>
         <ul class="page-footer__links">
             <li>#chtoevent</li>
-            <li><a target="_blank" href="https://vk.com/chtoevent">vk.com/chtoevent</a></li>
-            <li><a target="_blank" href="https://instagram.com/chtoevent">instagram.com/chtoevent</a></li>
-            <li><a target="_blank" href="https://t.me/chtoevent">t.me/chtoevent</a></li>
-            <li><a target="_blank" href="https://facebook.com/chtoevent">facebook.com/chtoevent</a></li>
+            <li><a target="_blank" href="https://vk.com/shtoevent">vk.com/shtoevent</a></li>
+            <li><a target="_blank" href="https://instagram.com/shtoevent">instagram.com/shtoevent</a></li>
+            <li><a target="_blank" href="https://t.me/shtoevent">t.me/shtoevent</a></li>
+            <li><a target="_blank" href="https://facebook.com/shtoevent">facebook.com/shtoevent</a></li>
         </ul>
     </footer>
 </body>
